storage: Add gluster pool filter and fix virsh pool listing
Recent addition of the gluster pool type omitted fixing the virsh and
virConnectListAllStoragePool filters. A typecast of the converting
function in virsh showed that also the sheepdog pool was omitted in the
command parser.

This patch adds gluster pool filtering support and fixes virsh to
properly convert all supported storage pool types. The added typecast
should avoid doing such mistakes in the future.

--- a/tools/virsh.pod
+++ b/tools/virsh.pod
@@ -2589,7 +2589,7 @@ with autostarting disabled.
 You may also want to list pools with specified types using I<type>, the
 pool types must be separated by comma, e.g. --type dir,disk. The valid pool
 types include 'dir', 'fs', 'netfs', 'logical', 'disk', 'iscsi', 'scsi',
-'mpath', 'rbd', and 'sheepdog'.
+'mpath', 'rbd', 'sheepdog' and 'gluster'.
 
 The I<--details> option instructs virsh to additionally
 display pool persistence and capacity related information where available.
