man: shm-merge-across-nodes is optional
Mark the shm-merge-across-nodes parameter of node-memory-tune command
as optional in the virsh man page.

--- a/tools/virsh.pod
+++ b/tools/virsh.pod
@@ -307,7 +307,7 @@ in seconds for which the host has to be suspended, it should be at least
 60 seconds.
 
 =item B<node-memory-tune> [I<shm-pages-to-scan>] [I<shm-sleep-millisecs>]
-I<shm-merge-across-nodes>
+[I<shm-merge-across-nodes>]
 
 Allows you to display or set the node memory parameters.
 I<shm-pages-to-scan> can be used to set the number of pages to scan
