virsh: man: Fix spelling of parameters for --memspec in snapshot-create-as
https://bugzilla.redhat.com/show_bug.cgi?id=1080859

Snapshot type should be no, internal, or external.

--- a/tools/virsh.pod
+++ b/tools/virsh.pod
@@ -3070,7 +3070,7 @@ is specified, the snapshot will not include vm state.
 The I<--memspec> option can be used to control whether a checkpoint
 is internal or external.  The I<--memspec> flag is mandatory, followed
 by a B<memspec> of the form B<[file=]name[,snapshot=type]>, where
-type can be B<none>, B<internal>, or B<external>.  To include a literal
+type can be B<no>, B<internal>, or B<external>.  To include a literal
 comma in B<file=name>, escape it with a second comma. I<--memspec> cannot
 be used together with I<--disk-only>.
 
